@@ -1,5 +1,5 @@
 <Type Name="DeleteType" FullName="Gtk.DeleteType">
-  <TypeSignature Language="C#" Value="public sealed struct DeleteType;" Maintainer="auto" />
+  <TypeSignature Language="C#" Value="public sealed struct DeleteType;" Maintainer="Hector Gomez M" />
   <AssemblyInfo>
     <AssemblyName>gtk-sharp</AssemblyName>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
@@ -7,9 +7,13 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>To be added</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
-  </Docs>
+    <summary>An enumeration used by TextView</summary>
+    <remarks>
+     <para>
+      This enumeration is used by <see cref="T:Gtk.TextView"/> to see decide how delete behaves.
+     </para>
+    </remarks>
+   </Docs>
   <Base>
     <BaseTypeName>System.Enum</BaseTypeName>
   </Base>
@@ -34,8 +38,12 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Delete the character that is highlighted by the cursor.</summary>
+        <remarks>
+         <para>
+           Delete the character that is highlighted by the cursor.
+         </para>
+        </remarks>
       </Docs>
     </Member>
     <Member MemberName="WordEnds">
@@ -46,8 +54,12 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Delete until the end of a word</summary>
+        <remarks>
+         <para>
+          Delete only the portion of the word to the left/right of cursor if we're in the middle of a word.
+         </para>
+        </remarks>
       </Docs>
     </Member>
     <Member MemberName="Paragraphs">
@@ -58,8 +70,12 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Delete the whole line.</summary>
+        <remarks>
+         <para>
+           Delete the whole line, <example>like C-k in Emacs or dd in Vi</example>.
+         </para>
+        </remarks>
       </Docs>
     </Member>
     <Member MemberName="Whitespace">
@@ -70,8 +86,12 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Delete all the whitespace before the cursor.</summary>
+        <remarks>
+         <para>
+           Delete all the whitespace before the cursor.
+         </para>
+        </remarks>
       </Docs>
     </Member>
     <Member MemberName="value__">
