@@ -1,3 +1,9 @@
+2003-02-22  Duncan Mak  <duncan@ximian.com>
+
+	* en/Gtk/HSeparator.xml:  Hector Gomez.
+
+	* en/Gtk/DeleteType.xml:  Kevin Breit, with edits.
+
 2003-02-21  Kevin Breit  <mrproper@ximian.com>
 
 	* en/Gtk/Arrow.xml: Fixed a small error where a . was missing at the end of a sentence.
